# vpn_cli

./: Cargo.toml  Changes.md  Readme.md
.github/workflows/: release.yaml
src/: cli.rs  config.rs  fs.rs  lib.rs  main.rs
src/db/: mod.rs
src/db/sqlite/: mod.rs
src/db/sqlite/migrations/: 001_create_users.sql  002_create_peers.sql  mod.rs
src/error/: config.rs  db.rs  mod.rs
src/vpn/: mod.rs  openvpn.rs  wireguard.rs
test/: vpn_cli.json
