[package]
name = "vpn_cli"
version = "0.1.2"
edition = "2024"
authors = ["Vladimir to.govorov@gmail.com"]
description = "A command line interface for easier VPN server management"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
ipnet = { version = "2.12.0", features = ["serde"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22.1"
thiserror = "2.0.18"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
